# AlphaDeepChess

./: .clang-format  .gitignore  AlphaDeepChessGUI.py  CMakeLists.txt  Doxyfile  README.md  annotated.html  annotated_dup.js  bit__utilities_8hpp.html  bit__utilities_8hpp.js  bit__utilities_8hpp__dep__incl.map  bit__utilities_8hpp__dep__incl.md5  bit__utilities_8hpp__incl.map  bit__utilities_8hpp__incl.md5  bit__utilities_8hpp_source.html  boardViewer.py  board_8cpp.html  board_8cpp.js  board_8cpp__incl.map  board_8cpp__incl.md5  board_8hpp.html  board_8hpp.js  board_8hpp__dep__incl.map  board_8hpp__dep__incl.md5  board_8hpp__incl.map  board_8hpp__incl.md5  board_8hpp_source.html  classBoard-members.html  classBoard.html  classBoard.js  classGameState-members.html  classGameState.html  classGameState.js  classHistory-members.html  classHistory.html  classKillerMoves-members.html  classKillerMoves.html  classMove-members.html  classMove.html  classMove.js  (+418 more)
.github/workflows/: generate-documentation.yml  manual-workflow.yml
boardViewerSrc/: chessBoard.py  uci.py
boardViewerSrc/ui/: textbox.py
doc/AlphaDeepChess/: TFGTeXiS.tex  biblio.bib  config.tex
doc/AlphaDeepChess/Apendices/: appendixB.tex
doc/AlphaDeepChess/Capitulos/: ConclusionesTrabajoFuturo.tex  ConclusionsFutureWork.tex  ContribucionesPersonales.tex  DescripcionTrabajo.tex  EstadoDeLaCuestion.tex  Introduccion.tex  Profiling.tex
doc/AlphaDeepChess/Cascaras/: abstract.tex  agradecimientos.tex  cover.tex  dedicatoria.tex  resumen.tex
doc/AlphaDeepChess/Imagenes/Fuentes/: readme.txt
doc/AlphaDeepChess/TeXiS/: TeXiS.sty  TeXiS_acron.tex  TeXiS_bib.tex  TeXiS_cover.tex  TeXiS_en.bst  TeXiS_pream.tex
docs/: doxygen-awesome.css
docs/AlphaDeepChess/: .gitignore  TFGTeXiS.blg  TFGTeXiS.ilg  TFGTeXiS.tex  acronimos.gdf  biblio.bib  constantes.tex  guionado.tex
docs/AlphaDeepChess/Apendices/: appendixA.tex
docs/AlphaDeepChess/Capitulos/: AnalysisOfImprovements.tex  ConclusionesTrabajoFuturo.tex  ConclusionsFutureWork.tex  ContribucionesPersonales.tex  DescripcionTrabajo.tex  EstadoDeLaCuestion.tex  ImprovementTechniques.tex  Introduccion.tex  Introduction.tex  Testing.tex
docs/AlphaDeepChess/Cascaras/: abstract.tex  agradecimientos.tex  bibliografia.tex  cover.tex  dedicatoria.tex  fin.tex  resumen.tex
docs/AlphaDeepChess/TeXiS/: TeXiS_bib.tex  TeXiS_cab.tex  TeXiS_cover.tex  TeXiS_dedic.tex  TeXiS_indice.tex  TeXiS_pream.tex  TeXiS_toc.tex
gpu/: evaluation_gpu.jl
gpu_to_be_continued/: evaluation_gpu.jl
gui/: chessBoard.py  eventManager.py  history.py  uci.py
gui/ui/: fenText.py  navigationBar.py  rightPanel.py
include/: defs.hpp
include/board/: board.hpp  precomputed_data.hpp
include/evaluation/: evaluation.hpp  precomputed_eval_data.hpp
include/move/: move.hpp  move_list.hpp
include/move_generator/: magic_bitboards.hpp  magic_numbers.hpp  move_generator.hpp  move_generator_info.hpp  precomputed_move_data.hpp
include/move_ordering/: move_ordering.hpp
include/search/: history.hpp  killer_moves.hpp  search.hpp  search_utils.hpp
include/uci/: uci.hpp
include/utilities/: bit_utilities.hpp  col.hpp  coordinates.hpp  diagonal.hpp  direction.hpp  game_state.hpp  perft.hpp  piece.hpp  row.hpp  square.hpp  transposition_table.hpp  zobrist.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enums_6.js  (+57 more)
src/: defs.hpp  loop.cpp  loop.hpp  main.cpp
src/board/: board.cpp  board.hpp  square.hpp  types.hpp
src/evaluation/: evaluation_basic.cpp  evaluation_basic2.cpp  evaluation_dynamic.cpp  evaluation_gpu.cpp  evaluation_safety_mobility.cpp
src/moveGenerator/: move.hpp
src/move_generator/: move_generator_basic.cpp  move_generator_magic_bitboards.cpp  precomputed_move_data.cpp
src/move_ordering/: move_ordering_MVV_LVA.cpp  move_ordering_basic.cpp
src/search/: history.cpp  search_basic.cpp  search_multithread.cpp  search_transposition_table.cpp  search_tt_extensions_reductions.cpp  search_tt_reductions.cpp
src/uci/: uci.cpp
src/utilities/: coordinates.cpp  perft.cpp  transposition_table.cpp
test/: CMakeLists.txt  board_test.cpp  col_test.cpp  coordinates_test.cpp  diagonal_test.cpp  game_state_test.cpp  history_test.cpp  move_generator_test.cpp  move_list_test.cpp  move_test.cpp  piece_test.cpp  row_test.cpp  search_test.cpp  square_test.cpp  test_utils.hpp  testsAlphaDeepChess.cpp  transposition_table_test.cpp  zobrist_test.cpp
test/manual_tests/: compareEngines.py  positions.fen  tests.py
